# Young-Shell

./: .gitignore  Cargo.toml  README.md  READMEE.md  build.rs  crll  something.rs
spell/: Cargo.toml  README.md
spell/src/: lib.rs
src/: bar.rs  main.rs  menu.rs  workspace.rs
src/bin_backup/: bar.rs  ex_lock.rs  ex_mac.rs  minimal_example.rs
ui/: app-window.slint  bar.slint  buttons.slint  data_structures.slint  menu.slint  mpris.slint  noti.slint  styles.slint  wallpaper.slint
ui/sleek-ui/widgets/: divider.slint  input.slint  switch.slint
ui/sleek-ui/widgets/button/: button.slint
ui/sleek-ui/widgets/icon-button/: icon-button.slint
young-shell/: Cargo.toml
young-shell/src/: main.rs  main2.rs  slint_adapter.rs  wayland_adapter.rs
young-shell/ui/: MyButton.slint  app-window.slint  buttons.slint  menu.slint  mpris.slint  styles.slint
