[package]
name = "young-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
slint = { version = "1.13.0", features = ["renderer-software"] }
spell-framework = { path = "../Spell/spell-framework/" }
# spell-framework = { version = "0.1.4", git = "https://github.com/VimYoung/Spell/" }
sysinfo = "0.37.0"

[build-dependencies]
slint-build = "1.13.0"

[patch.crates-io]
slint = { git = "https://github.com/slint-ui/slint" }
slint-build = { git = "https://github.com/slint-ui/slint" }
i-slint-core = { git = "https://github.com/slint-ui/slint" }
i-slint-renderer-skia = { git = "https://github.com/slint-ui/slint" }
